// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterWallets should render 1`] = `
<div>
  <div
    class="text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="mb-3 font-semibold text-theme-neutral-700"
      >
        Filter Network
      </div>
      <div
        class="text-sm text-theme-neutral-500"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      />
      <div
        class="sc-AxhCb bzWLYJ relative cursor-pointer border-theme-primary-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw eKROFT flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-100 text-theme-primary-500"
        >
          <div
            class="sc-AxjAm iepfoc"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-row mb-8"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Your Wallets
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          Select the display of your wallets
        </div>
      </div>
      <div
        class="w-1/5 my-auto text-right"
      >
        <div
          class="relative cursor-pointer text-theme-neutral-700"
          data-testid="filter-wallets__wallets"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="flex items-center justify-end"
            >
              <span
                class="inline-block pr-1 font-semibold"
              >
                All
              </span>
              <div
                class="sc-AxjAm pXfjM"
                height="15"
                width="15"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-row mb-6"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Portfolio Chart
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You an hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhUy rBBWa"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="sc-AxgMl hwTgHl"
          >
            <span
              class="sc-AxheI hZHhjt"
            />
          </div>
        </label>
      </div>
    </div>
    <div
      class="flex flex-row mb-4"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Transaction History
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You can hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhUy rBBWa"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="sc-AxgMl hwTgHl"
          >
            <span
              class="sc-AxheI hZHhjt"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets should render with networks selection 1`] = `
<div>
  <div
    class="text-left"
  >
    <div
      class="mb-8"
    >
      <div
        class="mb-3 font-semibold text-theme-neutral-700"
      >
        Filter Network
      </div>
      <div
        class="text-sm text-theme-neutral-500"
      >
        Select the types of networks
      </div>
    </div>
    <div>
      <ul
        class="inline-block"
        data-testid="network__option"
      >
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--0"
        >
          <div
            class="sc-AxhCb bzWLYJ relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw eKROFT flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--1"
        >
          <div
            class="sc-AxhCb bzWLYJ relative border-theme-success-500 text-theme-success-500"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                eth.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw eKROFT flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-success-500 text-theme-success-contrast"
            >
              <div
                class="sc-AxjAm HWmvM"
                height="12"
                width="12"
              >
                <svg>
                  checkmark.svg
                </svg>
              </div>
              <span />
            </span>
          </div>
        </li>
        <li
          class="inline-block mr-5 cursor-pointer"
          data-testid="network__option--2"
        >
          <div
            class="sc-AxhCb bzWLYJ relative border-theme-neutral-200 text-theme-neutral-300"
          >
            <div
              class="sc-AxjAm buCJuk"
              height="20"
              width="20"
            >
              <svg>
                btc.svg
              </svg>
            </div>
            <span
              class="sc-AxiKw eKROFT flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-neutral-200"
            >
              <span />
            </span>
          </div>
        </li>
      </ul>
      <div
        class="sc-AxhCb bzWLYJ relative cursor-pointer border-theme-primary-100"
        data-testid="network__viewall"
      >
        <div
          class="text-sm font-semibold text-theme-primary-500"
        >
          All
        </div>
        <span
          class="sc-AxiKw eKROFT flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent border-theme-primary-100 text-theme-primary-500"
        >
          <div
            class="sc-AxjAm iepfoc"
            height="10"
            width="10"
          >
            <svg>
              chevron-down.svg
            </svg>
          </div>
          <span />
        </span>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-row mb-8"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Your Wallets
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          Select the display of your wallets
        </div>
      </div>
      <div
        class="w-1/5 my-auto text-right"
      >
        <div
          class="relative cursor-pointer text-theme-neutral-700"
          data-testid="filter-wallets__wallets"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="flex items-center justify-end"
            >
              <span
                class="inline-block pr-1 font-semibold"
              >
                All
              </span>
              <div
                class="sc-AxjAm pXfjM"
                height="15"
                width="15"
              >
                <svg>
                  chevron-down.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-8 border-t border-dotted border-1 border-theme-neutral-200"
    />
    <div
      class="flex flex-row mb-6"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Portfolio Chart
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You an hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhUy rBBWa"
            data-testid="filter-wallets_toggle--portfolio"
            type="checkbox"
          />
          <div
            class="sc-AxgMl hwTgHl"
          >
            <span
              class="sc-AxheI hZHhjt"
            />
          </div>
        </label>
      </div>
    </div>
    <div
      class="flex flex-row mb-4"
    >
      <div
        class="w-4/5"
      >
        <div
          class="mb-3 font-semibold text-theme-neutral-700"
        >
          Transaction History
        </div>
        <div
          class="text-sm text-theme-neutral-500"
        >
          You can hide this unit if you like
        </div>
      </div>
      <div
        class="w-1/5 pt-3 text-right"
      >
        <label>
          <input
            class="sc-AxhUy rBBWa"
            data-testid="filter-wallets_toggle--transactions"
            type="checkbox"
          />
          <div
            class="sc-AxgMl hwTgHl"
          >
            <span
              class="sc-AxheI hZHhjt"
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
